<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuDisplayType"
        android:title="@string/menu_display_all"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuDisplayTypeAll"
                android:title="@string/menu_display_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuDisplayTypeTodo"
                android:title="@string/menu_display_todo"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuDisplayTypeDone"
                android:title="@string/menu_display_done"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>